--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ bld/
 [Oo]bj/
 tools/
 .vscode/
-testchain/devChain/geth
-testchain/devChain/history
+src/contract/testchain/devChain/geth
+src/contract/testchain/devChain/history
+src/contract/package-lock.json
 
 
 # Visual Studio 2015 cache/options directory
