--- a/src/contract/FactoryTests/FactoryTests.csproj
+++ b/src/contract/FactoryTests/FactoryTests.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    
+    <ProjectReference Include="..\Shared\Utils.csproj" />
   </ItemGroup>
 
 </Project>
